[Picture in Picture] Show controls on mouseover on the window.

The controls sometimes disappear depending on the mouse interactions
with the window. For example, when the controls disappear automatically,
the controls should reappear when the user moves around the window.

Bug: 882615
Change-Id: Ic4c0a391d81ec6ea475d19be6cd60b40cb0ba277
Reviewed-on: https://chromium-review.googlesource.com/1217719
Commit-Queue: apacible <apacible@chromium.org>
Reviewed-by: CJ DiMeglio <lethalantidote@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590512}
Former-commit-id: eccfdf3b662e3d964fe96ebd71aea4f71beb1947